--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </tr>
 
                 <tr>
-                    <td><iframe width="800" src="https://www.youtube-nocookie.com/embed/E3yuEdzCBcc?controls=0"
+                    <td><iframe width="800" height="650" src="https://www.youtube-nocookie.com/embed/E3yuEdzCBcc?controls=0"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
@@ -133,7 +133,7 @@
             </tbody>
         </table>
         <p class="section" id="results">Results</p>
-        <table width="750" border="0" align="center">
+        <table width="800" border="0" align="center">
             <tbody>
                 <tr>
                     <td colspan="4" align="center"><img src="./assets/result_gif_5.gif" width="100%" alt=""
@@ -191,7 +191,7 @@
         <table width="587" height="136" border="0">
             <tbody>
                 <tr>
-                    <td width="350"><a href='./supp/summary.html'><img src="./assets/supp.png" alt="" height="100"></a>
+                    <td width="350"><a href='./supp/summary.html'><img src="./assets/supp.png" alt="" height="150"></a>
                     </td>
 
                 </tr>
