adding related works

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
                 </tr>
 
                 <tr>
-                    <td><iframe width="800" height="450" src="https://www.youtube-nocookie.com/embed/E3yuEdzCBcc?controls=0"
+                    <td><iframe width="800" height="450"
+                            src="https://www.youtube-nocookie.com/embed/E3yuEdzCBcc?controls=0"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
@@ -213,7 +214,7 @@
                     <td width="50"><a href=""><img src="./assets/github_logo.png" alt="" height="50"></a>
                     </td>
                     <td>
-                        <p>[<a href="">code</a>]</p>
+                        <p>[<a href="">code(Coming Soon)</a>]</p>
                     </td>
 
                 </tr>
@@ -239,6 +240,35 @@
     publisher={ACM New York, NY, USA}
 }</pre>
         </blockquote>
+
+        <p class="section">&nbsp;</p>
+
+
+        <p class="section">Related Works</p>
+
+
+        <table width="940" border="0">
+            <tbody>
+                <tr>
+
+                    <a href="https://roxanneluo.github.io/Consistent-Video-Depth-Estimation/"><b>Consistent Video Depth
+                            Estimation</b></a><br>
+                    Xuan Luo, Jia-Bin Huang, Richard Szeliski, Kevin Matzen, Johannes Kopf.
+                    <em>SIGGRAPH 2020.</em><br><br>
+                </tr>
+                <tr>
+
+                    <a href="https://mannequin-depth.github.io/"><b>Learning the Depths of Moving People by Watching
+                            Frozen People</b></a><br>
+                    Zhengqi Li, Tali Dekel, Forrester Cole, Richard Tucker, Noah Snavely, Ce Liu, William T. Freeman.
+                    <em> CVPR 2019</em>
+
+                </tr>
+            </tbody>
+        </table>
+
+
+
 
 
 
