--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <tbody>
             <tr>
                 <td align="center">| <a href="#paper">Paper</a> | <a href="#video">Video</a> | <a
-                        href="#code">Code(Coming Soon)</a> | <a href="#BibTeX">BibTex</a>
+                        href="https://github.com/google/dynamic-video-depth">Code</a> | <a href="#BibTeX">BibTex</a>
                     |</td>
             </tr>
         </tbody>
@@ -211,10 +211,11 @@
         <table border="0">
             <tbody>
                 <tr>
-                    <td width="50"><a href=""><img src="./assets/github_logo.png" alt="" height="50"></a>
+                    <td width="50"><a href="https://github.com/google/dynamic-video-depth"><img
+                                src="./assets/github_logo.png" alt="" height="50"></a>
                     </td>
                     <td>
-                        <p>[<a href="">code(Coming Soon)</a>]</p>
+                        <p>[<a href="https://github.com/google/dynamic-video-depth">code</a>]</p>
                     </td>
 
                 </tr>
